# ACE-Step-1.5

./: .codex_pr_body.md  .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.jetson  README.md  docker-compose.jetson.yml  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  package.json  start_api_server_macos.sh  start_gradio_ui_macos.sh
acestep/: acestep_v15_pipeline.py  api_server.py  constants.py  gpu_config.py  handler.py  inference.py  launcher_legacy_torch_fix_test.py  llm_inference.py  openrouter_adapter.py  openrouter_models.py
acestep/api/: log_capture.py  log_capture_test.py  route_setup.py  route_setup_test.py  runtime_helpers.py  runtime_helpers_test.py  server_cli.py  server_cli_test.py  server_utils.py  server_utils_test.py  startup_llm_init.py  startup_llm_init_test.py  startup_model_init.py  startup_model_init_test.py  train_api_service_http_test.py
acestep/customized_vllm/: sequence.py
acestep/gradio_ui/: api_routes.py
acestep/text_tasks/: __init__.py  external_lm_captioning.py  external_lm_captioning_test.py  external_lm_providers.py  external_lm_providers_test.py  external_lm_runtime_store.py  external_lm_runtime_store_persistence_test.py  external_lm_runtime_store_test.py  passphrase_store.py  passphrase_store_test.py  secure_secret_store.py  secure_secret_store_test.py
acestep/third_parts/nano-vllm/: pyproject.toml
acestep/training/: lora_utils.py  (+1 more)
docs/: lora_memory_optimization.md
openrouter/: openrouter_api_server.py
scripts/: fetch-awesome.mjs
tests/: test_nanovllm_dtype_detection.py
(+70 files in other folders)
